# Luceo

./: .env.example  .gitignore  CLAUDE.md  LICENCE  LUCEO_ACTION_PLAN.md  LUCEO_DECISION_LOG.md  LUCEO_MAIN_DOCUMENT_v1.md  README.md  alembic.ini  project-report-1775470524.md  pyproject.toml
alembic/: env.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  FILE_MAP.md  PITCH_DECK_OUTLINE.md  Report-5.4.2026.md  SAFETY.md  SESSION_6_PROMPT.md  SETUP.md
docs/business/: EXECUTIVE_SUMMARY.md
docs/project/: ACTION_PLAN.md  MAIN_DOCUMENT.md  PERSONAS.md
docs/reports/: CONTEXT_architecture.md  CONTEXT_code_core.md  CONTEXT_code_services.md  CONTEXT_status.md  REPORT_2026-04-05.md  REPORT_2026-04-05_s3.md  REPORT_2026-04-06_s4.md  REPORT_2026-04-06_s5.md  REPORT_2026-04-06_s6.md  REPORT_2026-04-06_s7.md  project-report-2026-04-06.md
docs/research/: deep-research.md  technical-research.md
docs/technical/: API_REFERENCE.md  ARCHITECTURE.md  FILE_MAP.md  SAFETY.md  SETUP.md
src/: __init__.py  main.py
src/api/: __init__.py  admin.py  auth.py  chat.py  crisis.py  router.py  screening.py  tracking.py  utils.py
src/api/schemas/: admin.py  auth.py  chat.py  crisis.py  screening.py  tracking.py
src/core/: __init__.py  audit.py  config.py  crisis.py  crisis_contacts.py  database.py  deps.py  guardrails.py  middleware.py  prompts.py  rag.py  rate_limit.py  security.py  text_utils.py
src/models/: __init__.py  audit_log.py  conversation.py  knowledge_base.py  refresh_token.py  screening.py  tracking.py  user.py
src/services/: __init__.py  anthropic_client.py  chat.py  rag.py  screening.py  tracking.py  user_context.py
tests/: __init__.py  conftest.py  test_anthropic_client.py  test_auth.py  test_chat_service.py  test_crisis.py  test_guardrails.py  test_integration.py  test_middleware.py  test_rag.py  test_rate_limit.py  test_screening.py  test_security.py  test_tracking_service.py  test_user_context.py
